--- a/util/py_lib/seqan/dox/tpl/css/style.css
+++ b/util/py_lib/seqan/dox/tpl/css/style.css
@@ -68,23 +68,6 @@ dl.constants .discussion *:last-child { margin-bottom: 0; }
 
 .method_details { border-top: 1px dotted #aaa; margin-top: 15px; padding-top: 0; }
 .method_details.first { border: 0; }
-p.signature, h3.signature {
-  font-size: 1.1em; font-weight: normal; font-family: Monaco, Consolas, Courier, monospace;
-  padding: 6px 10px; margin-top: 18px;
-  background: #e5e8ff; border: 1px solid #d8d8e5; -moz-border-radius: 3px; -webkit-border-radius: 3px;
-}
-p.signature tt,
-h3.signature tt { font-family: Monaco, Consolas, Courier, monospace; }
-p.signature .overload,
-h3.signature .overload { display: block; }
-p.signature .extras,
-h3.signature .extras { font-weight: normal; font-family: sans-serif; color: #444; font-size: 1em; }
-p.signature .not_defined_here,
-h3.signature .not_defined_here,
-p.signature .aliases,
-h3.signature .aliases { display: block; font-weight: normal; font-size: 0.9em; font-family: sans-serif; margin-top: 0px; color: #555; }
-p.signature .aliases .names,
-h3.signature .aliases .names { font-family: Monaco, Consolas, Courier, monospace; font-weight: bold; color: #000; font-size: 1.2em; }
 
 .tags .tag_title { font-size: 1em; margin-bottom: 0; font-weight: bold; }
 .tags ul { margin-top: 5px; padding-left: 30px; list-style: square; }
